--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "typescrip_graphic_math_demo",
+  "name": "StunDraw2D",
   "version": "1.0.0",
-  "description": "",
+  "description": "TypeScript Canvas Graphics Engine",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "lite-server"
+    "dev": "lite-server"
   },
   "keywords": [],
-  "author": "",
+  "author": "fjphysics",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0",
-    "systemjs": "^0.19.47",
-    "typescript": "^2.8.3"
+    "browserify": "^16.3.0",
+    "gulp": "^4.0.2",
+    "gulp-typescript": "^5.0.1",
+    "tsify": "^4.0.1",
+    "typescript": "^3.5.3",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
